fixed horizontal overflow

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -2,6 +2,7 @@ article {
   border: solid 1px #ddd;
   box-shadow: 0 0 4px #e3e5eb;
   margin-bottom: 20px;
+  overflow-x: auto;
   &.read {
     background-color: #f3f3f3;
     a {
